fix month text overflow

--- a/schedule_ui/src/components/calendar/calendar.scss
+++ b/schedule_ui/src/components/calendar/calendar.scss
@@ -21,4 +21,12 @@
       width: 100%;
     }
   }
+
+  &-month {
+    &-cell-text {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  }
 }
